--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,7 +7,7 @@
     
     <meta name="referrer" content="no-referrer-when-downgrade" />
     
-    <title>HobbyTrack</title>
+    <title>Commit</title>
   </head>
   <body>
     <div id="root"></div>
