feat: Enhance HTML metadata for improved SEO and social sharing

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,14 +1,25 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
-    <meta name="referrer" content="no-referrer-when-downgrade" />
-    
-    <title>Commit</title>
-  </head>
+    <title>Commit | Master Your Consistency</title>
+    <meta name="description" content="The developer-first habit tracker. Visualize your daily progress with GitHub-style contribution graphs. Push changes to your real life." />
+
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://commit-liard.vercel.app/" />
+    <meta property="og:title" content="Commit | Master Your Consistency" />
+    <meta property="og:description" content="Visualize your daily progress with GitHub-style contribution graphs. Push changes to your real life." />
+    <meta property="og:image" content="https://commit-liard.vercel.app/og-image.png" />
+
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://commit-liard.vercel.app/" />
+    <meta property="twitter:title" content="Commit | Master Your Consistency" />
+    <meta property="twitter:description" content="Visualize your daily progress with GitHub-style contribution graphs. Push changes to your real life." />
+    <meta property="twitter:image" content="https://commit-liard.vercel.app/og-image.png" />
+    </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
